--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,56 @@
 p {
     color: black;
-    font size: 20
-    }
+    font size: 20;
+    text-align: justify;
+  }
 
 h3 {
-       color: #483D8B;
-       }
+     color: #483D8B;
+   }
+
+h2 {
+    color: #778899;
+    text-align: center;
+    }
+
 h1 {
     color: #6A5ACD;
+    text-align: center
     }
 
 h4 {
     color: #008080;
     }
 
-#table {
+#table2 {
         color: #008080;
         font size: 20
+        width: 500px;
+        border: 1;
+        }
+
+form {
+      text-align: column;
+      margin: 0 auto;
+      width:250px;
+}
+
+label {
+       margin: auto;
+       width:250px;
+       }
+
+textarea {
+          margin: 0 auto;
+          width:250px;
+         }
+
+button {
+        color: black;
+        font-style: italic;
+        font-weight: bold;
+        background-color: #F0FFF0;
+        padding: 15px 25px;
+        border-width: 1;
+        border-style: inline;
         }
